force-app/main/default/objects/Goal__c/Goal__c.object-meta.xml
<CustomObject>
    <label>Meta</label>
    <nameField>
        <label>Meta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>