force-app/main/default/objects/Goal__c/fields/De_Loc__c.field-meta.xml
<CustomField>
    <fullName>De_Loc__c</fullName>
    <formula>IF(
OR(
TEXT(Linha__c) == &apos;LOCAÇÃO&apos;,
Novas_locacoes__c == true
),
TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>De Loc</label>
    <type>Checkbox</type>
</CustomField>