force-app/main/default/objects/Goal__c/fields/Estepe__c.field-meta.xml
<CustomField>
    <fullName>Estepe__c</fullName>
    <label>Estepe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estepe 1</fullName>
            </value>
            <value>
                <fullName>Estepe 2</fullName>
            </value>
            <value>
                <fullName>Estepe 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>