force-app/main/default/objects/Goal__c/fields/Familia__c.field-meta.xml
<CustomField>
    <fullName>Familia__c</fullName>
    <label>Família</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALTO FLUXO</fullName>
            </value>
            <value>
                <fullName>ANESTESIA</fullName>
            </value>
            <value>
                <fullName>APOIO A MOBILIDADE</fullName>
            </value>
            <value>
                <fullName>ARCO CIRURGICO</fullName>
            </value>
            <value>
                <fullName>ASPIRADORES</fullName>
            </value>
            <value>
                <fullName>BERÇOS</fullName>
            </value>
            <value>
                <fullName>BERÇOS AQUECIDOS</fullName>
            </value>
            <value>
                <fullName>BPAP</fullName>
            </value>
            <value>
                <fullName>CADEIRAS</fullName>
            </value>
            <value>
                <fullName>CAMAS</fullName>
            </value>
            <value>
                <fullName>CARDIOLOGIA</fullName>
            </value>
            <value>
                <fullName>CIRURGIA MINIMAMENTE INVASIVA</fullName>
            </value>
            <value>
                <fullName>CONCENTRADORES</fullName>
            </value>
            <value>
                <fullName>ELETROCIRURGIA</fullName>
            </value>
            <value>
                <fullName>ELEVADORES</fullName>
            </value>
            <value>
                <fullName>ENDOSCOPIA</fullName>
            </value>
            <value>
                <fullName>FOCOS CIRÚRGICOS</fullName>
            </value>
            <value>
                <fullName>FOTOTERAPIA</fullName>
            </value>
            <value>
                <fullName>GERAL</fullName>
            </value>
            <value>
                <fullName>GINECOLOGIA</fullName>
            </value>
            <value>
                <fullName>HIGIENE</fullName>
            </value>
            <value>
                <fullName>IMAGEM</fullName>
            </value>
            <value>
                <fullName>INALADORES</fullName>
            </value>
            <value>
                <fullName>INCUBADORAS</fullName>
            </value>
            <value>
                <fullName>INFUSÃO</fullName>
            </value>
            <value>
                <fullName>INSTRUMENTAIS CIRURGICOS</fullName>
            </value>
            <value>
                <fullName>LABORATORIAL</fullName>
            </value>
            <value>
                <fullName>LAPAROSCOPIA</fullName>
            </value>
            <value>
                <fullName>LAVADORAS</fullName>
            </value>
            <value>
                <fullName>MACAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>