force-app/main/default/objects/Goal__c/fields/Final__c.field-meta.xml
<CustomField>
    <fullName>Final__c</fullName>
    <label>Final</label>
    <type>Date</type>
</CustomField>