force-app/main/default/objects/Goal__c/fields/Inicio__c.field-meta.xml
<CustomField>
    <fullName>Inicio__c</fullName>
    <label>Início</label>
    <type>Date</type>
</CustomField>