force-app/main/default/objects/Goal__c/fields/Linha__c.field-meta.xml
<CustomField>
    <fullName>Linha__c</fullName>
    <label>Linha</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>linha</valueSetName>
    </valueSet>
</CustomField>