force-app/main/default/objects/Goal__c/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <label>Marca</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZIMMER BIOMET</fullName>
            </value>
            <value>
                <fullName>Yuwell</fullName>
            </value>
            <value>
                <fullName>PENTAX</fullName>
            </value>
            <value>
                <fullName>LINET</fullName>
            </value>
            <value>
                <fullName>HUGEMED</fullName>
            </value>
            <value>
                <fullName>BAUMER</fullName>
            </value>
            <value>
                <fullName>OUTROS</fullName>
            </value>
            <value>
                <fullName>MINDRAY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>