force-app/main/default/objects/Goal__c/fields/Mes__c.field-meta.xml
<CustomField>
    <fullName>Mes__c</fullName>
    <formula>IF( Periodo__c = &apos;Mensal&apos;, MONTH(Final__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mês</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>