force-app/main/default/objects/Goal__c/fields/METAS_DE_DEMONSTRA_O__c.field-meta.xml
<CustomField>
    <fullName>METAS_DE_DEMONSTRA_O__c</fullName>
    <label>METAS DE DEMONSTRAÇÃO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>