force-app/main/default/objects/Goal__c/fields/Novas_locacoes__c.field-meta.xml
<CustomField>
    <fullName>Novas_locacoes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Novas locações</label>
    <type>Checkbox</type>
</CustomField>