force-app/main/default/objects/Goal__c/fields/Periodo__c.field-meta.xml
<CustomField>
    <fullName>Periodo__c</fullName>
    <formula>IF( Final__c -  Inicio__c &gt; 31 &amp;&amp; Final__c -  Inicio__c &lt;= 94, &apos;Trimestral&apos;, IF(Final__c -  Inicio__c &gt; 94, &apos;Anual&apos;, &apos;Mensal&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Período</label>
    <type>Text</type>
</CustomField>