force-app/main/default/objects/Goal__c/fields/ska__c.field-meta.xml
<CustomField>
    <fullName>ska__c</fullName>
    <formula>Vendedor__r.SKA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ska</label>
    <type>Checkbox</type>
</CustomField>