force-app/main/default/objects/Goal__c/fields/Vendedor_Formula__c.field-meta.xml
<CustomField>
    <fullName>Vendedor_Formula__c</fullName>
    <formula>Vendedor__r.FirstName + &quot; &quot; + Vendedor__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendedor (Formula)</label>
    <type>Text</type>
</CustomField>