force-app/main/default/objects/Goal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tipo__c</columns>
    <columns>Inicio__c</columns>
    <columns>Final__c</columns>
    <columns>Mes__c</columns>
    <columns>Ano__c</columns>
    <columns>Familia__c</columns>
    <columns>Meta__c</columns>
    <columns>Linha__c</columns>
    <columns>Vendedor__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Estado__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ano__c</field>
        <operation>equals</operation>
        <value>2025</value>
    </filters>
    <filters>
        <field>Regi_o__c</field>
        <operation>equals</operation>
        <value>COLÔMBIA</value>
    </filters>
    <label>Tudo</label>
</ListView>